fixed overflow hidden issue

--- a/source/styles/content.scss
+++ b/source/styles/content.scss
@@ -34,7 +34,7 @@
         margin-left: $gutter / -2;
         margin-right: $gutter / -2;
         // padding-bottom: 18px;
-        @include clearfix();
+        @include pie-clearfix();
 
         .content-editor & {
             position: relative;
